[package]
name = "wasm_verifier"
version = "2.0.0"
edition = "2021"
description = "Certificate Transparency Verification Module - Advanced CT Verification (Rust/WASM)"
license = "MIT"
repository = "https://github.com/haidang24/extension_tls-"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[profile.release]
lto = true
opt-level = "s"
